# roc-dict

./: .gitignore  README.md  build-roc.sh  quick-bench-change.sh  run-example.sh
cc-hash-bench/: .gitignore  bench  bench-1k-list.cc  bench.cc  build-bench.sh  meson.build
cc-hash-bench/src/: abslhash-1k-list-bench.cc  abslhash-u64-bench.cc  hashdict-insert-remove-bench.cc  wyhash-1k-list-bench.cc  wyhash-hashflood.cc  wyhash-tests.cc  wyhash-u64-bench.cc
cc-hash-bench/subprojects/: abseil-cpp.wrap
cc-hash-bench/subprojects/abseil-cpp-20211102.0/absl/hash/internal/: low_level_hash.cc
examples/: .gitignore  AbslHash.roc  BitMask.roc  Group.roc  U64FlatDict.roc  U64FlatHashDict.roc  Wyhash.roc  abslhash-1k-list-bench.roc  abslhash-bench.roc  abslhash-u64-bench.roc  abslhash-u64-bytes-bench.roc  bench.sh  echo.roc  hashdict-insert-bench.roc  hashdict-insert-remove-bench.roc  wyhash-1k-list-bench.roc  wyhash-1k-list-stateful-bench  wyhash-1k-list-stateful-bench.roc  wyhash-1k-list-stateful-list-bench.roc  wyhash-1k-list-with-copy-bench  wyhash-1k-list-with-copy-bench.roc  wyhash-bench  wyhash-bench.roc  wyhash-to-bytes-bench.roc  wyhash-u64-bench.roc  wyhash-u64-bytes-bench.roc
examples/platform/: .gitignore  Task.roc  host.zig
examples/platform/zig-cache/o/044abca388c524b4339dbc0adf341c89/: stage1.id
examples/platform/zig-cache/o/66a8d7718b616a10f85bb6db994c7702/: builtin.zig  stage1.id
examples/platform/zig-cache/o/c031f59fcb4504d12e1fcc21a3780c1e/: builtin.zig  stage1.id
examples/platform/zig-cache/o/e04a2681c06e30a57baabb1b2280673a/: stage1.id
platform/: Cargo.toml
